--- a/src/main/chrome/options.html
+++ b/src/main/chrome/options.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="English">
   <head>
-    <title>Flitter - Burn your Twitter account</title>
+    <title>Burnulator - Burn your Twitter account</title>
     <link rel="stylesheet" href="options.css">
   </head>
   <script src="./options.js"></script>
